# spica

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
examples/: .gitignore  CMakeLists.txt  align.c  compose-rgb.c  stack-dark.c
extraDoc/: siww.md
include/: SBoundingBox.h  SCoarseAlign.h  SImage.h  SImageSource.h  SSequence.h  SSharedImage.h  SStar.h  SStarFinder.h  SStarMatcher.h  STransform.h  SVec.h
src/: SBoundingBox.c  SCommon.h  SDataRepr.h  SImage.c  SImage.h  SImageIO.c  SImageIO.h  SStarFinder.c  STransform.c  SVec.h
src/SCoarseAlign/: SBrutAligner.c  SSmallChangeAligner.c
src/SImage/: SGradient_scale.c  SImage_SIWW.c  SImage_add.c  SImage_addConst.c  SImage_addTr.c  SImage_backgroundGradient.c  SImage_clear.c  SImage_clone.c  SImage_data.c  SImage_div.c  SImage_divConst.c  SImage_divTr.c  SImage_frame.c  SImage_frame.h  SImage_invert.c  SImage_loadPNG.c  SImage_mask.c  SImage_maskTr.c  SImage_mul.c  SImage_mulConst.c  SImage_mulTr.c  SImage_mulWeight.c  SImage_pixel.c  SImage_row.c  SImage_savePNG.c  SImage_scaleDown.c  SImage_stack.c  SImage_stackTr.c  SImage_sub.c  SImage_subConst.c  SImage_subGradient.c  SImage_subTr.c  SImage_subpixel.c  SImage_toFormat.c
src/SImageSource/: SImageSource_File.c  SImageSource_ctor.c
src/SSequence/: SSequenceElem_ctor.c  SSequence_addImage.c  SSequence_ctor.c
src/SStar/: SStarSet_add.c  SStarSet_clone.c  SStarSet_ctor.c  SStarSet_sort.c  SStar_init.c
src/SStarMatcher/: SStarMatcher_clone.c  SStarMatcher_ctor.c  SStarMatcher_getTransform.c  SStarMatcher_matchStars.c  SStarMatcher_update.c
